# ProjectTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: .clang-tidy  clang-format.cmake  clang-tidy.cmake
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html
include/ModuleExample/: Example.hpp
src/: main.cpp
src/ModuleExample/: Example.cpp
tests/: CMakeLists.txt  ExampleTests.cpp
